--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -1,8 +1,14 @@
-main{
-    display:grid;
+main {
+    display: grid;
 }
+
 .column {
     float: left;
     width: 50%;
-    height:500px;
-    }
+    height: 500px;
+}
+
+img {
+    height: 200px;
+    width: 150px;
+}
